--- a/server/package.json
+++ b/server/package.json
@@ -58,7 +58,8 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "typescript": "^5.8.3"
   },
   "repository": "y"
 }
