--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-cloudfront": "^3.363.0",
     "@aws-sdk/client-s3": "^3.363.0",
     "@aws-sdk/s3-request-presigner": "^3.363.0",
+    "@prisma/client": "^6.8.2",
     "bcrypt": "^5.1.0",
     "colors.ts": "^1.0.20",
     "cookie-parser": "^1.4.6",
@@ -40,7 +41,7 @@
     "stripe": "^12.12.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
